--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://diegun13.github.io/sheik-combo-app/",
   "name": "sheik-combo-app",
   "private": true,
   "version": "0.0.0",
